k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
  namespace: app-prod
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
