k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: app-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nodejs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-svc
                port:
                  number: 80
